2004-09-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c: Support flash blocks of arbitary size. The
	DataFlash devices for example have block of 528 bytes.

2004-08-21  Andrew Lunn  <andrew.lunn@ascom.ch>

        * removed the functions cyg_flash_get_limits and
	cyg_flash_get_block_info. Reimplemented the legacy functions
	that depended on them and flashiodev.c
	
2004-08-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flashiodev.c Ordering problem again. If an invalid name is
	configured the lookup would fail and it then was impossible to do
	a cyg_io_config_set. Lookup cannot fail because the name does not
	exist in FIS.

2004-08-13  Andrew Lunn  <andrew.lunn@ascom.ch>

        * src/flash.c: Make the flock lock/unlock code compile without
	warnings.
	* src/flashiodev.c (flashiodev_lookup): Only initialize the device
	if we have not already been initialized via cyg_set_config().
	This stopped redboots mount -f working.

2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flashiodev.c (flashiodev_lookup): Moved most of the
	flashiodev_init into this new function. This fixed the ordering
	issue with redboot startup. When doing a FIS name lookup in
	flashiodev_init, redboot was not yet nitialised so lookup
	failed. Moving this into flashiodev_lookup solves this problem.
	Its now possible for redboot to mount the jffs2 filesystem with 
	-d /dev/flash1.

2004-08-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flashiodev.c: Fix typo in macro and configuration options
	
2004-08-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c: Major rewrite to implement a new API
	* src/legacy_api.c: Support the legacy API
	* src/legacy_drv.c: Support the legacy driver API
	* src/flashiodev.c: Support the new API and multiple devices
	* include/flash_priv.h: Interface devices should use
	* cdl/io_flash.cdl: Updates for new interface and multiple devices.
	
2004-06-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (flash_read): Don't check if the flash is write 