@@ -1,3 +1,10 @@
+2004-09-14  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/flash.c (cyg_flash_init): Add assert checking that the
+	end address matches the block information.
+	* src/legacy_dev.c (legacy_flash_init): Ensure that the end
+	address is the last valid address, not the first invalid address.
+
 2004-09-09  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/flash.c: Support flash blocks of arbitary size. The
